--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_local_notifications: ^19.3.0
   firebase_messaging: ^15.2.9
   auto_route: ^10.1.0+1
+  permission_handler: ^12.0.1
+  flutter_foreground_task: ^9.1.0
+  geolocator: ^14.0.2
 
 
 dev_dependencies:
