--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_foreground_task: ^9.1.0
   geolocator: ^14.0.2
+  mobile_device_identifier: ^0.0.3
+  device_info_plus: ^11.5.0
+  flutter_map: ^8.1.1
 
 
 dev_dependencies:
