--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.muto.driverapp.mutoDriverApp</string>
+	<string>com.mutoServices.mutoClientApp</string>
 	<key>PROJECT_ID</key>
 	<string>anubis-baf99</string>
 	<key>STORAGE_BUCKET</key>
