--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   mobile_device_identifier: ^0.0.3
   device_info_plus: ^11.5.0
   flutter_map: ^8.1.1
+  dart_pusher_channels: ^1.2.3
 
 
 dev_dependencies:
